Fix toggle weirdness with smaller devices
The navbar container element is misaligned at the medium breakpoint
(when the toggle button first appears) and then stacked atop the toggle
button at the smallest breakpoint. This should fix both of these cases.

--- a/static/style.css
+++ b/static/style.css
@@ -21,3 +21,20 @@ button, input, optgroup, select, textarea {
 ul.pagination > li.disabled {
     cursor: not-allowed;
 }
+
+.navbar-toggler-right {
+    right: 0;
+}
+
+@media (max-width: 992px) {
+    .navbar-toggleable-md > .container {
+        padding-left: inherit;
+    }
+}
+
+@media (max-width: 575px) {
+    .navbar-toggleable-md > .container {
+        padding: 0;
+        margin: 0;
+    }
+}
